--- a/resources.html
+++ b/resources.html
@@ -36,21 +36,25 @@
       <div class="container">
         <article id="main-col" >
           <h1 class="page-title">Resources</h1>
-          <p>daskdhashadas</p>
-          <p>hdsogdajahsdhoashdoiahasd</p>
+          <b>Website</b>
+
+            <p><a href="https://www.youtube.com/watch?v=Wm6CUkswsNw&t=2265s">Website design</a></p>
+          <p>  <a href="https://www.youtube.com/watch?v=0afZj1G0BIE&t=301s"> Learn to use CSS</a></p>
+          <p>  <a href="https://www.youtube.com/watch?v=bWPMSSsVdPk">Learn Html in 12 minute</a></p>
+          <p>  <a href="https://www.youtube.com/watch?v=aX522Om28-Q">Host website on github</a></p>
+            <p><a href="https://atom.io/">Text editor</a></p>
+            <p><b>Assembly</b></p>
+            <p><a href="https://www.autodesk.com/products/fusion-360/students-teachers-educators">Fusion360 </a></p>
+            <p><b>Arduino</b></p>
+            <p><a href="https://www.arduino.cc/">Arduino</a></p>
+            <p><a href="https://www.arduino.cc/en/Reference/ServoDetach">ServoDetach Reference</a></p>
+            <p><a href="https://howtomechatronics.com/tutorials/arduino/ultrasonic-sensor-hc-sr04/">Ultrasonic Reference</a></p>
+            <p><a href="https://howtomechatronics.com/how-it-works/how-servo-motors-work-how-to-control-servos-using-arduino/">Servo MOtor Referemce</p>
 
 
 
-          </article>
-          <aside id="sidebar">
 
 
-
-          <h3>How it is use</h3>
-          <p>djkhdsajhasdhas</p>
-
-
-          </aside>
 
 
 
